# the-notebook-mcp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  mcp_test.ipynb  notebook_mcp_server.py  notebook_server.py  pyproject.toml  requirements.txt  run_tests.sh
.cursor/: mcp.json
.cursor/notes/: notebook_tool_failures.md  project_map_for_refactor.md  refactor_guide.md  reorg_plan.md  test_plan.md  the_notebook_mcp_files.md  uv_migration_plan.md
.github/workflows/: ci.yml  publish.yml
cursor_notebook_mcp/: __init__.py  notebook_ops.py  server.py  sse_transport.py  tools.py
docs/: pre-commit-setup.md  project-map.md
examples/: README.md  cursor-notebook-mcp.service  cursor-rules.mdc  launch-notebook-mcp.sh
tests/: conftest.py  test_cli.py  test_notebook_ops.py  test_notebook_tools.py  test_server.py  test_sse_transport.py  test_tool_utils.py
tests/fixtures/: .jupyter_ystore.db  hello-world.ipynb  large_or_malformed_notebook.ipynb  normalize_notebooks.py  persist_variables.py  test_notebook.ipynb
the_notebook_mcp/: __init__.py  __version__.py  cli.py  server.py
the_notebook_mcp/core/: branding.py  config.py  logging.py  notebook_ops.py
the_notebook_mcp/tools/: __init__.py  cell_tools.py  diagnostic_tools.py  file_tools.py  info_tools.py  metadata_tools.py  output_tools.py  tool_utils.py
