[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-notebook-mcp"
version = "0.8.0"
authors = [
  { name="Saulo Vallory", email="me@saulo.engineer" },
]
description = "Model Context Protocol (MCP) implementation for Jupyter notebooks to overcome limitation with Cursor"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["jupyter", "notebook", "mcp", "cursor", "ai", "agent", "nbformat", "ipynb", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    "fastmcp>=2.3.3",
    "nbformat>=5.0",
    "nbconvert>=6.0",
    "ipython",
    "jupyter_core",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
sse = [
    "uvicorn>=0.20.0",
    "starlette>=0.25.0"
]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.18",
    "pytest-cov",
    "coveralls",
    "pytest-mock"
]
dev = [
    "ruff>=0.11.9",
]

[project.urls]
"Homepage" = "https://github.com/svallory/the-notebook-mcp"
"Bug Tracker" = "https://github.com/svallory/the-notebook-mcp/issues"
"Source" = "https://github.com/svallory/the-notebook-mcp"

[project.scripts]
the-notebook-mcp = "the_notebook_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["the_notebook_mcp"]

[tool.pytest.ini_options]
addopts = "--cov=the_notebook_mcp --cov-report=term-missing --cov-report=html -m 'not slow'"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["the_notebook_mcp"]
omit = [
    "*/__main__.py",
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "except ImportError:",
    "@(abc\\.)?abstractmethod",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "poethepoet>=0.34.0",
]

[tool.poe.tasks]
start = "python -m the_notebook_mcp.server start --allow-root $POE_PWD"
check-help = "python -m the_notebook_mcp.server help"
check-help-version = "python -m the_notebook_mcp.server help --version"
check-version = "python -m the_notebook_mcp.server version"
check-start = "gtimeout 5s python -m the_notebook_mcp.server start --allow-root $POE_PWD"
check-start-sse = "gtimeout 5s poe start --transport sse"
check-start-http = "gtimeout 5s poe start --transport streamable-http"

[tool.poe.tasks.test]
cmd = "python -m pytest"
env.JUPYTER_PLATFORM_DIRS = "1"
